@@ -1,3 +1,8 @@
+2022-03-10  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/libpoke.h: Clarify that pk_array_type_bound always
+	returns PK_NULL at the time being.
+
 2022-03-08  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pkl-trans.c (pkl_trans1_ps_format): Fix format string
